--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="JavaScript.js"></script>
     <title>Docunt</title>
 </head>
-<body>
+<body style="background-color: #3a322d;">
     
 <script>
 
