--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body style="background-color: #3a322d;">
     
 <button> press </button>
+<input id="textBox" type="text" />
+<div id="output"></div>
+
 </body>
 </html>
