getting js on screen

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JavaScript.js"></script>
     <title>Docunt</title>
 </head>
 <body style="background-color: #3a322d;">
     
-<button> press </button>
-<input id="textBox" type="text" />
-<div id="output"></div>
+
+
+<button onclick=text();> press </button>
+<p id="bReplace"></p>
 
 </body>
+<script src="JavaScript.js"></script>
 </html>
